--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
-    "next": "15.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.3.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-i18next": "^15.5.3"
   },
   "devDependencies": {
