--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,8 +21,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
-      "@components/*": ["./app/frontend/components/*"],
-      "@lib/*": ["./app/frontend/lib/*"]
+      "@locales/*": ["./public/locales/*"], 
+      "@components/*": ["./app/components/*"],
+      "@lib/*": ["./lib/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
