--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/localizations": "^3.16.5",
     "@clerk/nextjs": "^6.22.0",
+    "@vercel/analytics": "^1.5.0",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "next": "^15.3.3",
